--- a/index.html
+++ b/index.html
@@ -42,21 +42,28 @@
                     </ul>
                 </nav>
                 <div class="sign">
-                    <button class="sign__in-btn" href="#!">Sign in</button>
-                    <button class="sign__up-btn" href="#!">Sign Up</button>
+                    <button class="sign__in-btn">Sign in</button>
+                    <button class="sign__up-btn">Sign Up</button>
                 </div>
+                <nav class="hamburger-menu">
+                    <label class="menu-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </label>
+                </nav>
             </div>
         </div>
         <div class="header__row">
-            <div class="header__content">
+            <aside class="header__content">
                 <h1 class="header__title">Monitor your business on real-time dashboard</h1>
                 <div class="header__text">
-                    <p class="text txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet
+                    <p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet
                         volutpat pellentesque volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam.
                     </p>
                 </div>
                 <a class="btn btn--red btn__long" href="#!">Try for free</a>
-            </div>
+            </aside>
             <div class="header__img">
                 <img src="./img/header/header-content-screen.svg" alt="analytic">
             </div>
@@ -68,13 +75,12 @@
             <div class="container">
                 <div class="features__top">
                     <div class="features__title">
-                        <h2 class="title">
-                            Main Features
-                        </h2>
+                        <h2 class="title">Main Features</h2>
                     </div>
                     <div class="features__text">
-                        <p class="text txt_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet
-                            volutpat pellentesque volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed
+                        <p class="text txt_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi
+                            aliquet volutpat pellentesque volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet
+                            sed
                             nullam. Vitae et, tortor pulvinar risus pulvinar sit amet. Id vel in nam malesuada.</p>
                     </div>
                 </div>
@@ -83,31 +89,31 @@
                         <div>
                             <img class="features__column-img" src="./img/features/monitoring.svg" alt="monitoring">
                         </div>
-                        <div>
+                        <aside>
                             <h4 class="features__column-title">Monitoring 24/7</h4>
-                        <div class="features__column-desc">Lorem ipsum dolor sit amet, conse ctetur adipis
-                            cing elit. Elementum nisi aliquet volutpat.</div>
-                        </div>
+                            <div class="features__column-desc">Lorem ipsum dolor sit amet, conse ctetur adipis
+                                cing elit. Elementum nisi aliquet volutpat.</div>
+                        </aside>
                     </div>
                     <div class="features__column">
                         <div>
                             <img class="features__column-img" src="./img/features/widget.svg" alt="widget">
                         </div>
-                        <div>
+                        <aside>
                             <h4 class="features__column-title">Widget System</h4>
-                        <div class="features__column-desc">Sapien in etiam vitae nibh nunc mattis imperdiet
-                            sed nullam. Vitae et, tortor pulvinar risus pulvinar.</div>
-                        </div>
+                            <div class="features__column-desc">Sapien in etiam vitae nibh nunc mattis imperdiet
+                                sed nullam. Vitae et, tortor pulvinar risus pulvinar.</div>
+                        </aside>
                     </div>
                     <div class="features__column">
                         <div>
                             <img class="features__column-img" src="./img/features/perfomance.svg" alt="perfomance">
                         </div>
-                        <div>
+                        <aside>
                             <h4 class="features__column-title">Best Performance</h4>
-                        <div class="features__column-desc">Lorem ipsum dolor sit amet, consectetur adipis
-                            cing elit. Elementum nisi aliquet volutpat.</div>
-                        </div>
+                            <div class="features__column-desc">Lorem ipsum dolor sit amet, consectetur adipis
+                                cing elit. Elementum nisi aliquet volutpat.</div>
+                        </aside>
                     </div>
                 </div>
             </div>
@@ -131,7 +137,7 @@
                     <img class="automated__column-img" src="./img/automated/screen-01.svg" alt="screen-01">
                 </div>
                 <div class="automated__row automated__reverse">
-                    <div class="automated__column">
+                    <aside class="automated__column">
                         <div class="automated__column-title">
                             <h2 class="title">Fully customizable to address your needs </h2>
                         </div>
@@ -142,11 +148,11 @@
                                 Vitae et, tortor pulvinar risus pulvinar sit amet.
                             </p>
                         </div>
-                    </div>
+                    </aside>
                     <img class="automated__column-img" src="./img/automated/screen-02.svg" alt="screen-01">
                 </div>
                 <div class="automated__row">
-                    <div class="automated__column">
+                    <aside class="automated__column">
                         <div class="automated__column-title">
                             <h2 class="title">Pre-built Dashboard Templates</h2>
                         </div>
@@ -157,20 +163,20 @@
                                 Vitae et, tortor pulvinar risus pulvinar sit amet.
                             </p>
                         </div>
-                    </div>
+                    </aside>
                     <img class="automated__column-img" src="./img/automated/screen-03.svg" alt="screen-01">
                 </div>
             </div>
         </section>
         <section class="price">
             <div class="container">
-                <div class="price__top">
+                <aside class="price__top">
                     <div class="price__top-title">
                         <h2 class="title">Pricing Plans</h2>
                     </div>
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet
                         volutpat pellentesque volutpat est. </p>
-                </div>
+                </aside>
                 <div class="price__card">
                     <div class="card">
                         <div class="card__content">
